# VendorManagement

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  Vendor Management.postman_collection.json  pyproject.toml
VendorManagement/: settings.py  urls.py
core/: auth.py  decorators.py  urls.py
core/migrations/: 0001_initial.py  0002_historicalperformance_created_at_and_more.py  0003_purchaseorder_expected_delivery_date_and_more.py  0004_vendor_is_disabled.py  0005_alter_vendor_average_response_time_and_more.py  0006_alter_purchaseorder_issue_date_and_more.py
core/models/: __init__.py  core.py  historical_performance.py  purchase_order.py  signal_functions.py  signals_init.py  vendor.py
core/serializers/: historical_performance.py  purchase_order.py  vendor.py
core/views/: views.py
