[tool.poetry]
name = "vendormanagement"
version = "0.1.0"
description = "This system handles vendor profiles, track purchase orders, and calculate vendor performance metrics"
authors = ["AnkushGochke"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.2.7"
djangorestframework-hstore = "^1.3"
mysqlclient = "^2.2.0"

[tool.poetry.group.dev.dependencies]
django-silk = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
